os/: Add Touch driver IST415 SUPPORT
Add Touch device driver in rtl8730e board and HAL touch common layer for application

The structure of touch buffer is:

struct touch_sample_s {
	int npoints; /* The number of touch points in point[] /
	struct touch_point_s point[1]; / Actual dimension is npoints /
	struct touch_point_s point[TOUCH_MAX_POINTS]; / Actual dimension is npoints */
};

struct touch_point_s {
	uint8_t id; /* Unique identifies contact; Same in all reports for the contact /
	uint8_t flags; / See TOUCH_* definitions above /
	int16_t x; / X coordinate of the touch point (uncalibrated) /
	int16_t y; / Y coordinate of the touch point (uncalibrated) /
	int16_t h; / Height of touch point (uncalibrated) /
	int16_t w; / Width of touch point (uncalibrated) /
	uint16_t pressure; / Touch pressure */
};

We have added the array for number of consecutive fingers touching the screen.
you can also refer the example app for usage apps/examples/lcd_test/example_lcd.c
function: static void touch_test(void)

TASH>>lcd_test
TASH>>=== LCD demo ===
xres : 480, yres:800
Total touch points 3
coordinates id: 0, x : 190 y : 135 touch type: 2
Touch hold/move event
coordinates id: 1, x : 309 y : 532 touch type: 1
Touch press event
coordinates id: 2, x : 161 y : 304 touch type: 1
Touch press event
Total touch points 4
coordinates id: 0, x : 187 y : 135 touch type: 2
Touch hold/move event
coordinates id: 1, x : 309 y : 532 touch type: 2
Touch hold/move event
coordinates id: 2, x : 161 y : 304 touch type: 2
Touch hold/move event
coordinates id: 3, x : 210 y : 431 touch type: 2
Touch hold/move event

--- a/os/drivers/Kconfig
+++ b/os/drivers/Kconfig
@@ -441,6 +441,16 @@ config TIMER
 		driver. See include/tinyara/timer.h for further timer driver
 		information.
 
+config INPUT
+	bool "Input Device Support"
+	default n
+	---help---
+		This selection enables the touch support"
+
+if INPUT
+source drivers/input/Kconfig
+endif # INPUT
+
 config MMINFO
 	bool "Memory info Driver Support"
 	default n
